# fastcall

./: .eslintrc  .gitignore  .gitmodules  .npmignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  fastcall.files  fastcall.includes  gulpfile.js  jsconfig.json  package-lock.json  package.json
benchmarks/: common.js  config.js  config.json  fastcallRun.js  ffiRun.js  importBenchlib.js  importBenchmod.js  imports.js  index.js  nativeModuleRun.js  nativeRun.js  run.js
benchmarks/benchlib/: CMakeLists.txt  benchlib.cpp  functions.cpp  functions.h
benchmarks/benchmod/: CMakeLists.txt  benchmod.cpp  worker.h
es5/benchmarks/: common.js  common.js.map  config.js  config.js.map  fastcallRun.js  fastcallRun.js.map  ffiRun.js  ffiRun.js.map  importBenchlib.js  importBenchlib.js.map  importBenchmod.js  importBenchmod.js.map  imports.js  imports.js.map  index.js  index.js.map  nativeModuleRun.js  nativeModuleRun.js.map  nativeRun.js  nativeRun.js.map  run.js  run.js.map
es5/lib/: Disposable.js  Disposable.js.map  FastArray.js  FastArray.js.map  FastCallback.js  FastCallback.js.map  FastFunction.js  FastFunction.js.map  FastStruct.js  FastStruct.js.map  FastUnion.js  FastUnion.js.map  FunctionDefinition.js  FunctionDefinition.js.map  FunctionParser.js  FunctionParser.js.map  Library.js  Library.js.map  MultilineParser.js  MultilineParser.js.map  NameFactory.js  NameFactory.js.map  Parser.js  Parser.js.map  RefTypeDefinition.js  RefTypeDefinition.js.map  RefTypeParser.js  RefTypeParser.js.map  Scoped.js  Scoped.js.map  defs.js  defs.js.map  es5Support.js  es5Support.js.map  index.js  index.js.map  native.js  native.js.map  queue.js  queue.js.map  (+14 more)
es5/lib/TooTallNates/: ref.js.map  struct.js  struct.js.map  union.js  union.js.map
es5/lib/ffi/: Callback.js  Callback.js.map  Function.js  Function.js.map  Library.js  Library.js.map  index.js  index.js.map
es5/lib/ref-libs/: ArrayIndex.js  ArrayIndex.js.map  array.js  array.js.map  ref.js  ref.js.map  struct.js  struct.js.map  union.js  union.js.map
es5/test/: index.js  index.js.map
es5/test/suites/: declare.js  declare.js.map  dynload.js  dynload.js.map  ffiCompatibility.js  ffiCompatibility.js.map  helpers.js  helpers.js.map  libraryTests.js  libraryTests.js.map  raii.js  raii.js.map  refTypes.js  refTypes.js.map  smokeTests.js  smokeTests.js.map  synchModes.js  synchModes.js.map
lib/: AsyncResult.js  Callback.js  Disposable.js  FastArray.js  FastCallback.js  FastFunction.js  FastStruct.js  FastUnion.js  FieldsDefinition.js  Func.js  Function.js  FunctionDefinition.js  FunctionParser.js  Library.js  MultilineParser.js  NameFactory.js  Parser.js  RefTypeDefinition.js  RefTypeParser.js  Scoped.js  defs.js  es5Support.js  index.js  int64.js  native.js  queue.js  refHelpers.js  rex.js  scope.js  splitter.js  typeCode.js  verify.js
lib/TooTallNates/: struct.js  union.js
lib/ffi/: Callback.js  Function.js  Library.js  index.js
lib/ref-libs/: ArrayIndex.js  array.js  ref.js  struct.js  union.js
src/: CMakeLists.txt  asyncresultbase.cpp  asyncresultbase.h  callbackbase.cpp  callbackbase.h  callbackdata.h  callbackfactories.cpp  callbackfactories.h  callbackimpl.cpp  callbackimpl.h  dcarg.h  dcbarg.h  dccall.h  defs.h  deps.h  dyncallStuff.cpp  dyncallbackwrapper.cpp  dyncallbackwrapper.h  dyncallcallback.cpp  dyncallcallback.h  dyncallwrapper.cpp  dyncallwrapper.h  dynloadStuff.cpp  dynloadStuff.h  dynloadstuff.cpp  dynloadstuff.h  dynloadwrapper.cpp  dynloadwrapper.h  fastcall.cpp  functionbase.cpp  functionbase.h  functioninvokers.cpp  functioninvokers.h  getargvalue.h  getv8value.h  helpers.cpp  helpers.h  instance.h  int64.cpp  int64.h  (+23 more)
test/: dynload.js  helpers.js  index.js  libraryTests.js  raii.js
test/suites/: declare.js  dynload.js  ffiCompatibility.js  fieldTypes.js  helpers.js  libraryTests.js  raii.js  refTypes.js  smokeTests.js  synchModes.js
test/testlib/: CMakeLists.txt  testlib.cpp
